# FleetManager

./: .gitignore  Config Keycloak.json  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATIONS.md  Makefile  Migration.sql  QUICK_REFERENCE.md  README.md  TESTING.md  compose.yaml  start-app.sh  start-demo.sh  start-obs.sh
.github/workflows/: docker-build.yml  go-service.yml  php-service.yml  python-service.yml
docs/: K8S.md  kafka-topics.json  keycloak-config.json
docs/api/: conductor-service.yaml  event-service.yaml  localization-service.yaml  maintenance-service.yaml  vehicle-service.yaml
frontend/: angular.json  dockerfile  package-lock.json  package.json
infra/k8s/: loki-datasource.yaml  otel-collector.yaml
infra/k8s/database/: README.md  fleet-kafka.yaml
infra/k8s/observabilite/: README.md  jeager.yaml  (+1 more)
kubernetes/: K8S.md  configmap.yaml  namespace.yaml
kubernetes/services/: api-gateway.yaml  conductor-service.yaml  event-service.yaml  keycloak.yaml  localization-service.yaml  maintenance-service.yaml  vehicle-service.yaml
scripts/: gps-simulator.js  location.proto  package-lock.json  package.json  seed.js
services/api-gateway/: Dockerfile  package-lock.json  package.json
services/conductor-service/: Dockerfile  composer.json
services/event-service/: Dockerfile  pyproject.toml
services/event-service/src/: consumer.py  main.py
services/localization-service/: Dockerfile  go.mod  go.sum
services/maintenance-service/: Dockerfile  composer.json
services/vehicle-service/: .dockerignore  Dockerfile  README  compose.yaml  composer.json
(+118 files in other folders)
