[project]
name = "event-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.1.0",
]
